[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Первый проект Hexlet"
authors = ["SizovN"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:brain_even"
brain-calc = "brain_games.scripts.brain_calc:brain_calc"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
